[package]
name = "yzesd-zsittle"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
publish = false

[dependencies]
base64 = "0.12"
ctrlc = "3.1"
futures-channel = "0.3"
memchr = "2.3"
smol = "0.1"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.4"
yz-encsess = { path = "../lib" }

[dependencies.futures-util]
version = "0.3"
features = ["unstable", "bilock"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smol-potat]
version = "0.3"
features = ["auto"]
