[package]
name = "yzesd-zsittle"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
publish = false

[dependencies]
async-io = "0.2"
async-net = "1.0"
blocking = "0.6"
base64 = "0.12"
futures-lite = "1.0"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.4"
yz-encsess = { path = "../lib" }

[dependencies.futures-util]
version = "0.3.5"
features = ["unstable", "bilock", "io"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
