[package]
name = "yzesd-zsittle"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
publish = false

[dependencies]
async-io = "1.1"
async-net = "1.4"
blocking = "1.0"
base64 = "0.13"
futures-lite = "1.11"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.13"
yz-encsess = { path = "../lib" }

[dependencies.futures-util]
version = "0.3.6"
features = ["unstable", "bilock", "io"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
