[package]
name = "yz-encsess"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"

[dependencies]
async-net = "1.0"
futures-lite = "1.0"
futures-micro = "0.3"
lazy_static = "1.4"
rand = "0.7"
take_mut = "0.2"
tracing = "0.1"
zeroize = "1.1"

[dependencies.snow]
version = "0.7"
features = ["ring-accelerated"]

[dependencies.yz-packet-stream]
version = "0.2.0"
features = ["tracing"]
