[package]
name = "yzesd2-server"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
publish = false

[dependencies]
async-channel = "1.4"
async-executor = "0.2"
async-net = "1.0"
ctrlc = "3.1"
easy-parallel = "3.1"
memchr = "2.3"
num_cpus = "1.13"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.4"
yz-encsess = { path = "../../lib" }
yzesd-zsittle = { path = ".." }
futures-lite = "1.0.0"

[dependencies.futures-util]
version = "0.3"
features = ["unstable", "bilock"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
