[package]
name = "yzesd2-server"
version = "0.1.0"
authors = ["Erik Zscheile <zseri.devel@ytrizja.de>"]
edition = "2018"
publish = false

[dependencies]
async-channel = "1.5"
async-executor = "1.3"
async-net = "1.4"
ctrlc = "3.1"
easy-parallel = "3.1"
futures-lite = "1.11"
memchr = "2.3"
num_cpus = "1.13"
toml = "0.5"
tracing = "0.1"
tracing-subscriber = "0.2.13"
yz-encsess = { path = "../../lib" }
yzesd-zsittle = { path = ".." }

[dependencies.futures-util]
version = "0.3.6"
features = ["unstable", "bilock", "io"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
